[gd_scene load_steps=10 format=2]

[ext_resource path="res://sprites/skills/divinecorrupt_effect.png" type="Texture" id=1]
[ext_resource path="res://scripts/skills/DivineCorrupt.gd" type="Script" id=2]
[ext_resource path="res://sprites/skills/divinecorrupt_charge.png" type="Texture" id=3]
[ext_resource path="res://sound/fx/Sound/SoundFX/062708_laser-charging-81968.mp3" type="AudioStream" id=4]
[ext_resource path="res://sound/fx/Sound/ApostleSound/JudgeSound.mp3" type="AudioStream" id=5]

[sub_resource type="Animation" id=3]
resource_name = "Charge"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("../DivinecorruptCharge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("../FX")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 4 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../DivinecorruptCharge:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="Animation" id=1]
resource_name = "Release"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "apply_hitbox"
}, {
"args": [  ],
"method": "wait_release_finished"
} ]
}
tracks/2/type = "audio"
tracks/2/path = NodePath("../FX")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 5 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="CircleShape2D" id=4]
radius = 30.0

[node name="DivideCorrupt" type="Node2D"]
position = Vector2( 0, -30 )
scale = Vector2( 1.58604, 1.58604 )
script = ExtResource( 2 )

[node name="DivinecorruptEffect" type="Sprite" parent="."]
visible = false
position = Vector2( -0.630493, -28 )
scale = Vector2( -4.45568, -4.45568 )
texture = ExtResource( 1 )
offset = Vector2( -25, 0 )
hframes = 6
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../DivinecorruptEffect")
anims/Charge = SubResource( 3 )
anims/RESET = SubResource( 2 )
anims/Release = SubResource( 1 )

[node name="DivinecorruptCharge" type="Sprite" parent="."]
position = Vector2( 0, -129.883 )
scale = Vector2( 1.18118, 1.18118 )
texture = ExtResource( 3 )
hframes = 8
vframes = 2
frame = 1

[node name="HitboxAttack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxAttack"]
position = Vector2( 111.77, 0 )
scale = Vector2( 2.20932, 2.20932 )
shape = SubResource( 4 )

[node name="FX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0, 18.915 )
scale = Vector2( 0.630501, 0.630501 )
stream = ExtResource( 4 )
volume_db = -5.0

[connection signal="body_entered" from="HitboxAttack" to="." method="_on_HitboxAttack_body_entered"]
[connection signal="body_exited" from="HitboxAttack" to="." method="_on_HitboxAttack_body_exited"]
